# aether-blueprint

./: .gitignore  BENCHMARK.md  Cargo.toml  INSTALL.md  LICENSE  LICENSE-MIT  NEXT_24H_PLAN.md  README.md  ROADMAP.md  STATUS.md  install.sh
.github/workflows/: release.yml
crates/aether-abi/: Cargo.toml
crates/aether-abi/src/: c_parser.rs  lib.rs  rust_parser.rs  types.rs
crates/aether-baseline/: Cargo.toml
crates/aether-baseline/src/: lib.rs
crates/aether-cli/: Cargo.toml
crates/aether-cli/src/: main.rs
crates/aether-concolic/: Cargo.toml
crates/aether-concolic/src/: constraint.rs  extractor.rs  generator.rs  lib.rs  record.rs
crates/aether-container/: Cargo.toml
crates/aether-container/src/: lib.rs
crates/aether-core/: Cargo.toml
crates/aether-core/src/: compaction.rs  context.rs  executor.rs  lib.rs  mock.rs  planner.rs  verifier.rs
crates/aether-core/tests/: agent_loop.rs
crates/aether-crypt/: Cargo.toml
crates/aether-crypt/src/: lib.rs
crates/aether-crypto-audit/: Cargo.toml
crates/aether-crypto-audit/src/: lib.rs
crates/aether-dast/: Cargo.toml
crates/aether-dast/src/: lib.rs
crates/aether-deps-reach/: Cargo.toml
crates/aether-deps-reach/src/: lib.rs
crates/aether-difffuzz/: Cargo.toml
crates/aether-difffuzz/src/: lib.rs  mutator.rs  runner.rs  session.rs
crates/aether-distrib/: Cargo.toml
crates/aether-distrib/src/: lib.rs
crates/aether-distrib/tests/: distributed_coordinator_integration.rs
crates/aether-drift/: Cargo.toml
crates/aether-drift/src/: lib.rs
crates/aether-ebpf/: Cargo.toml
crates/aether-ebpf/src/: lib.rs
crates/aether-explain/: Cargo.toml
crates/aether-explain/src/: lib.rs
crates/aether-flow/: Cargo.toml
crates/aether-flow/src/: graph.rs  lib.rs  sink.rs  source.rs
crates/aether-harden/: Cargo.toml
crates/aether-harden/src/: lib.rs
crates/aether-hook/: Cargo.toml
crates/aether-hook/src/: classifier.rs  lib.rs  pipeline.rs  policy.rs  reminder.rs  telemetry.rs
crates/aether-hook/tests/: adversarial.rs
crates/aether-hook/tests/fixtures/: probes.yaml
crates/aether-hwsec/: Cargo.toml
crates/aether-hwsec/src/: lib.rs  sidechannel.rs  tee.rs  tpm.rs
crates/aether-incident/: Cargo.toml
crates/aether-incident/src/: lib.rs
crates/aether-invariant/: Cargo.toml
crates/aether-invariant/src/: candidate.rs  lib.rs  miner.rs  report.rs
crates/aether-license/: Cargo.toml
crates/aether-license/src/: lib.rs
crates/aether-llm/: Cargo.toml
crates/aether-llm/src/: anthropic.rs  azure.rs  bedrock.rs  lib.rs  mantle.rs  retry.rs  vertex.rs
crates/aether-llm/tests/: anthropic_live.rs
crates/aether-lockgraph/: Cargo.toml
crates/aether-lockgraph/src/: graph.rs  lib.rs  parser.rs  recorder.rs
crates/aether-malware/: Cargo.toml
crates/aether-malware/src/: lib.rs
crates/aether-mcp/: Cargo.toml
crates/aether-mcp/src/: lib.rs
crates/aether-mem/: Cargo.toml
crates/aether-mem/src/: antipattern.rs  lib.rs
crates/aether-muttest/: Cargo.toml
crates/aether-muttest/src/: generator.rs  lib.rs  mutation.rs  runner.rs
crates/aether-netwatch/: Cargo.toml
crates/aether-netwatch/src/: lib.rs
crates/aether-nsd/: Cargo.toml
crates/aether-nsd/src/: lib.rs
crates/aether-overlay/: Cargo.toml
crates/aether-overlay/src/: lib.rs
crates/aether-overlay/tests/: activation.rs
crates/aether-patch/: Cargo.toml
crates/aether-patch/src/: lib.rs
crates/aether-perm/: Cargo.toml
crates/aether-perm/src/: lib.rs
crates/aether-plugin/: Cargo.toml
crates/aether-plugin-wasm/: Cargo.toml
crates/aether-plugin-wasm/src/: lib.rs
crates/aether-plugin/src/: lib.rs
crates/aether-policy/: Cargo.toml
crates/aether-policy/src/: lib.rs
crates/aether-pr-bot/: Cargo.toml
crates/aether-pr-bot/src/: lib.rs
crates/aether-redteam/: Cargo.toml
crates/aether-redteam/src/: lib.rs
crates/aether-render/: Cargo.toml
crates/aether-render/src/: lib.rs
crates/aether-report/: Cargo.toml
crates/aether-report/src/: lib.rs
crates/aether-reveng/: Cargo.toml
crates/aether-reveng/src/: lib.rs
crates/aether-sbom/: Cargo.toml
crates/aether-sbom/src/: lib.rs
crates/aether-sec/: Cargo.toml
crates/aether-sec/src/: lib.rs
crates/aether-secrets/: Cargo.toml
crates/aether-selfcheck/: Cargo.toml
crates/aether-semgrep-gen/: Cargo.toml
crates/aether-shuttle/: Cargo.toml
crates/aether-skill/: Cargo.toml
crates/aether-store/: Cargo.toml
crates/aether-supply-chain/: Cargo.toml
crates/aether-symexec/: Cargo.toml
crates/aether-taint/: Cargo.toml
crates/aether-threat-intel/: Cargo.toml
crates/aether-threat-model/: Cargo.toml
crates/aether-tls/: Cargo.toml
crates/aether-tools/: Cargo.toml
crates/aether-triage/: Cargo.toml
crates/aether-zk/: Cargo.toml
ctf/example-xor/: challenge.yaml
docs/: byoc-setup.md
docs/bugs/: orchestration-tool-use-id-mismatch.md
editor/jetbrains/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
editor/vscode/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
editor/wasm-plugin-example/: Cargo.toml  README.md  manifest.json
eval/: example.yaml
eval/coding/: COMPARISON.md  RESULTS.md  STRUCTURAL_ADVANTAGES.md  smoke-04.yaml  smoke-07.yaml  smoke-12.yaml  smoke-l3.yaml  smoke.yaml  suite.yaml
eval/security/: README.md  suite.yaml
overlays/: fable5.md
tests/: aa4-saml-post-smoke.py  aa5-multi-cert-smoke.py  aa5fu-configure-saml-multi-cert-smoke.py  aa6-oidc-whoami-smoke.py  bb4-signed-authn-request-smoke.py  bb5-oidc-refresh-smoke.py  bb6-saml-refresh-metadata-smoke.py  cc4-saml-drift-detection-smoke.py  cc5-oidc-proactive-refresh-smoke.py  cc6-eddsa-authn-request-smoke.py  check-status-no-placeholders.sh  dd4-ed25519-assertion-verify-smoke.py  dd5-saml-validuntil-staleness-smoke.py  dd6-oidc-clock-skew-smoke.py  ee5-saml-cache-duration-smoke.py  ee6-ed448-assertion-verify-smoke.py  ff5-oidc-mtls-smoke.py  ff7-orchestration-smoke.sh  gg5-scim-smoke.py  hh-a-distributed-smoke.sh  u4-signed-commit.sh  y7-saml-smoke.py  z1-oidc-smoke.py  z4-bedrock-smoke.py  z5-vertex-smoke.py  z6-azure-smoke.py
(+127 files in other folders)
