[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.7.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "AetherCode — a 10x Claude Code clone (workspace)"

[workspace.dependencies]
# General
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
anyhow = "1"
thiserror = "2"
once_cell = "1.19"
regex = "1.10"
async-trait = "0.1"

# Runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "process", "time", "sync", "signal"] }

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "charset", "stream"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
bytes = "1"
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Internal — workspace-relative path deps. Versioned so each crate can be
# published independently later without changing call sites.
aether-hook      = { path = "crates/aether-hook",      version = "0.7.0" }
aether-selfcheck = { path = "crates/aether-selfcheck", version = "0.7.0" }
aether-overlay   = { path = "crates/aether-overlay",   version = "0.7.0" }
aether-llm       = { path = "crates/aether-llm",       version = "0.7.0" }
aether-tools     = { path = "crates/aether-tools",     version = "0.7.0" }
aether-mcp       = { path = "crates/aether-mcp",       version = "0.7.0" }
aether-perm      = { path = "crates/aether-perm",      version = "0.7.0" }
aether-mem       = { path = "crates/aether-mem",       version = "0.7.0" }
aether-skill     = { path = "crates/aether-skill",     version = "0.7.0" }
aether-store     = { path = "crates/aether-store",     version = "0.7.0" }
aether-render    = { path = "crates/aether-render",    version = "0.7.0" }
aether-core      = { path = "crates/aether-core",      version = "0.7.0" }
aether-sec       = { path = "crates/aether-sec",       version = "0.7.0" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
