[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.32.0"
edition = "2021"
license = "Apache-2.0"
description = "AetherCode — a 10x Claude Code clone (workspace)"

[workspace.dependencies]
# General
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
anyhow = "1"
thiserror = "2"
once_cell = "1.19"
regex = "1.10"
async-trait = "0.1"

# Runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "process", "time", "sync", "signal"] }

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "charset", "stream"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
base64 = "0.22"
jsonwebtoken = "9"
bytes = "1"
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8", "pem"] }
rand_core = { version = "0.6", features = ["getrandom"] }
rusqlite = { version = "0.32", features = ["bundled"] }
notify = { version = "6", default-features = false, features = ["macos_kqueue"] }
tokio-stream = "0.1"
redis = { version = "0.27", default-features = false, features = ["tokio-comp"] }
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
quick-xml = { version = "0.36", default-features = false }
rsa = { version = "0.9", default-features = false, features = ["sha2", "pem"] }
x509-parser = { version = "0.16", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Internal — workspace-relative path deps. Versioned so each crate can be
# published independently later without changing call sites.
aether-hook      = { path = "crates/aether-hook",      version = "0.32.0" }
aether-selfcheck = { path = "crates/aether-selfcheck", version = "0.32.0" }
aether-overlay   = { path = "crates/aether-overlay",   version = "0.32.0" }
aether-llm       = { path = "crates/aether-llm",       version = "0.32.0" }
aether-tools     = { path = "crates/aether-tools",     version = "0.32.0" }
aether-mcp       = { path = "crates/aether-mcp",       version = "0.32.0" }
aether-perm      = { path = "crates/aether-perm",      version = "0.32.0" }
aether-mem       = { path = "crates/aether-mem",       version = "0.32.0" }
aether-skill     = { path = "crates/aether-skill",     version = "0.32.0" }
aether-store     = { path = "crates/aether-store",     version = "0.32.0" }
aether-render    = { path = "crates/aether-render",    version = "0.32.0" }
aether-core      = { path = "crates/aether-core",      version = "0.32.0" }
aether-sec       = { path = "crates/aether-sec",       version = "0.32.0" }
aether-plugin    = { path = "crates/aether-plugin",    version = "0.32.0" }
aether-plugin-wasm = { path = "crates/aether-plugin-wasm", version = "0.32.0" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
