[package]
name = "aether-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AetherCode CLI binary — argument parsing, subcommand dispatch, session lifecycle."

[[bin]]
name = "aether"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
aether-core.workspace = true
aether-llm.workspace = true
aether-overlay.workspace = true
aether-perm.workspace = true
aether-tools.workspace = true
aether-selfcheck.workspace = true
aether-mcp.workspace = true
aether-render.workspace = true
rustyline = "13"
walkdir = "2"
crossterm = "0.28"

[dev-dependencies]
