[package]
name = "aether-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AetherCode CLI binary — argument parsing, subcommand dispatch, session lifecycle."

[[bin]]
name = "aether"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
async-trait.workspace = true
aether-core.workspace = true
aether-llm.workspace = true
aether-overlay.workspace = true
aether-perm.workspace = true
aether-tools.workspace = true
aether-selfcheck.workspace = true
aether-mcp.workspace = true
aether-render.workspace = true
aether-store.workspace = true
aether-skill.workspace = true
aether-mem.workspace = true
aether-sec.workspace = true
aether-plugin.workspace = true
aether-plugin-wasm.workspace = true
rusqlite.workspace = true
notify.workspace = true
hex.workspace = true
reqwest.workspace = true
base64.workspace = true
sha2.workspace = true
rand_core.workspace = true
jsonwebtoken.workspace = true
once_cell.workspace = true
chrono.workspace = true
rustyline = "13"
walkdir = "2"
crossterm = "0.28"
axum = { version = "0.7", default-features = false, features = ["tokio", "http1", "json", "ws"] }
futures-util.workspace = true

[dev-dependencies]
