[package]
name = "aether-crypto-audit"
version = "0.38.0"
edition = "2021"
license = "Apache-2.0"
description = "Static weak-cryptography detection (TIER 19 real impl)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
