[package]
name = "aether-dast"
version = "0.38.0"
edition = "2021"
license = "Apache-2.0"
description = "DAST-lite HTTP security scanner: CORS, CSP, clickjacking, HSTS, info disclosure, cookies"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
