[package]
name = "aether-deps-reach"
version = "0.39.0"
edition = "2021"
license = "Apache-2.0"
description = "Reachability-aware CVE triage: only surface CVEs whose vulnerable code is actually called"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
syn = { workspace = true }
once_cell = { workspace = true }
