[package]
name = "aether-difffuzz"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AetherCode differential fuzzer: mutates shared inputs against two implementations and surfaces divergences."

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
