[package]
name = "aether-drift"
version = "0.40.0"
edition = "2021"
license = "Apache-2.0"
description = "Config drift detector: snapshot + diff against baseline, surfaces hardening regressions"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
aether-deps-reach = { workspace = true }
aether-harden = { workspace = true }
