[package]
name = "aether-explain"
version = "0.36.0"
edition = "2021"
license = "Apache-2.0"
description = "Exploit narrative generator: LLM-driven attack story + remediation for each finding"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
ureq = { workspace = true }
aether-deps-reach = { workspace = true }
