[package]
name = "aether-harden"
version = "0.41.0"
edition = "2021"
license = "Apache-2.0"
description = "CIS benchmark live system hardening checker: sysctl, SSH, SUID, world-writable, PAM"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
