[package]
name = "aether-hook"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AetherCode hook engine — reminder registry, source-tagged injection pipeline, and tamper-test classifier (D1)."

[dependencies]
serde.workspace = true
regex.workspace = true
once_cell.workspace = true

[dev-dependencies]
serde_yaml.workspace = true
