[package]
name = "aether-hwsec"
version = "0.41.0"
edition = "2021"
license = "Apache-2.0"
description = "Hardware security and side-channel resistance (TIER 15)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
