[package]
name = "aether-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AetherCode LLM provider abstraction — Anthropic Messages + OpenAI-compatible back-ends behind one trait."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
reqwest.workspace = true
tokio.workspace = true
