[package]
name = "aether-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AetherCode LLM provider abstraction — Anthropic Messages + OpenAI-compatible back-ends behind one trait."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
reqwest.workspace = true
tokio.workspace = true
futures-util.workspace = true
bytes.workspace = true
hex.workspace = true
sha2.workspace = true
hmac.workspace = true
chrono.workspace = true
base64.workspace = true
