[package]
name = "aether-netwatch"
version = "0.37.0"
edition = "2021"
license = "Apache-2.0"
description = "Network egress watcher: /proc/net snapshot diff to surface unexpected outbound connections"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
aether-deps-reach = { workspace = true }
