[package]
name = "aether-plugin-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WASM-sandboxed plugin runtime via wasmtime + WASI preview1. Sister crate to aether-plugin (subprocess); the two coexist."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tokio.workspace = true
aether-tools.workspace = true
wasmtime = { version = "27", default-features = false, features = ["runtime", "cranelift", "async"] }
wasmtime-wasi = "27"
bytes.workspace = true

[dev-dependencies]
tempfile = "3"
